--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "mocha": "3.1.0"
   },
   "dependencies": {
-    "node-uuid": "1.4.1",
-    "stale-lru-cache": "5.0.2"
+    "stale-lru-cache": "5.0.2",
+    "uuid": "3.0.0"
   },
   "main": "index.js",
   "keywords": [
